go top btn, added quote entity

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -25,6 +25,7 @@
     <!-- custom fonts -->
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Pacifico" />
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Cookie" />
+    <link href="//fonts.googleapis.com/css?family=Kirang+Haerang" rel="stylesheet">
     <!-- css -->
     <link rel="stylesheet" type="text/css" href="{{ asset('styles/styles/bootstrap4/bootstrap.min.css') }}">
     <link href="{{ asset('styles/plugins/font-awesome-4.7.0/css/font-awesome.min.css') }}" rel="stylesheet" type="text/css">
