--- a/app/Resources/views/partials/scripts.html.twig
+++ b/app/Resources/views/partials/scripts.html.twig
@@ -12,5 +12,6 @@
 
     <!-- custom scripts by backendDevs -->
     <script src="{{ asset('styles/js/lang-manager.js') }}"></script>
+    <script src="{{ asset('styles/js/business_scripts.js') }}"></script>
     <script src="{{ asset('styles/js/additional-scripts.js') }}"></script>
 </div>
