--- a/app/Resources/views/default/contacts.html.twig
+++ b/app/Resources/views/default/contacts.html.twig
@@ -2,7 +2,7 @@
 
 {% block body %}
     <div class="home">
-        <div class="home_background parallax-window" data-parallax="scroll" data-image-src="images/regular.jpg"
+        <div class="home_background parallax-window" data-parallax="scroll" data-image-src="/images/regular.jpg"
              data-speed="0.8"></div>
         <div class="home_content">
             <div class="container">
