--- a/app/Resources/views/partials/comments/article-comment-body.html.twig
+++ b/app/Resources/views/partials/comments/article-comment-body.html.twig
@@ -16,8 +16,9 @@
             <small class="post_meta"><span>{{ comment.commenterName }}</span><span>{{ comment.dateAdded|date("d/m, Y - H:i ") }}</span></small>
         {% endif %}
         {% if (app.user and comment.user == null) or (app.user and app.user.id != comment.user.id) %}
-        <button target_comment_id="{{ comment.id }}" type="button"
-                class="reply_button ml-auto">{{ localLang.reply }}</button>
+        <button target_comment_id="{{ comment.id }}" type="button" class="reply_button ml-auto">
+            {{ localLang.reply }}
+        </button>
         {% endif %}
     </div>
     <div class="comment_content">
@@ -27,8 +28,9 @@
         <form action="{{ path('leave_reply_post') }}" method="post" enctype="multipart/form-data">
             <input type="hidden" value="{{ path('show_article', {'id':article.id}) }}#comment_id_{{ comment.id }}" name="reply[redirect]">
             <input type="hidden" value="{{ comment.id }}" name="reply[parentCommentId]">
-            {{ form_row(form._token) }}
-
+            <input name="reply[commenterName]" type="hidden" value="{{ app.user.username }}"  required="required">
+            <input name="reply[commenterEmail]"  value="{{ app.user.email }}" type="hidden" required="required">
+            <input type="hidden" name="token" value="{{ csrf_token(comment.id) }}">
             <textarea name="reply[content]" class="comment_text" placeholder="{{ localLang.yourComment }}" required="required"></textarea>
             <button type="submit" class="comment_button">{{ localLang.reply }}</button>
         </form>
